article: fix for overlapping text with article-rewind

--- a/blocks/common/article/article.css
+++ b/blocks/common/article/article.css
@@ -1,3 +1,9 @@
+.article
+{
+    position: relative;
+    z-index: 1;
+}
+
 /* block level (begin) */
 .article p,
 .article ul,
